--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
               <h4 class="h4 timeline-item-title">Sri Satya Sai Vidya NIkethan</h4>
 
-              <span>2007 — 2019</span>
+              <span>2018</span>
 
               <p class="timeline-text">
                 I finished school up to 10th grade at Sri Satya Sai Vidya NIkethan in Guntur.
@@ -423,7 +423,7 @@
 
               <h4 class="h4 timeline-item-title">Sri Chaitanya</h4>
 
-              <span>2019 — 2021</span>
+              <span>2018 — 2020</span>
 
               <p class="timeline-text">
                 After completing my schooling upto 10th grade at Sri Satya Sai Vidya NIkethan
@@ -436,7 +436,7 @@
 
               <h4 class="h4 timeline-item-title">Dr.MGR Educational & Research Institute</h4>
 
-              <span>2021 — 2024</span>
+              <span>2020 — 2024</span>
 
               <p class="timeline-text">
                 After completing my schooling, I enrolled in the CSE(DS,AI) course at MGR University.
